--- a/RubyNonlife.Api/appsettings.json
+++ b/RubyNonlife.Api/appsettings.json
@@ -6,42 +6,42 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "RubyLifeUrlBaseUrl": "http://172.20.5.27/RubyPilot/",
+  "RubyLifeUrlBaseUrl": "",
 
   "Customers": {
-    "DownloadDocument": "http://172.20.5.27/RubyPilot/api/v1/customers/download-document",
-    "CustomerDocuments": "http://172.20.5.27/RubyPilot/api/v1/customers"
+    "DownloadDocument": "",
+    "CustomerDocuments": ""
   },
 
   "Finance": {
-    "VoucherBaseUrl": "http://172.20.5.27:1380/finance/api/v2/customers/{customerNumber}/vouchers",
-    "search": "http://172.20.5.27:1380/finance/api/v1",
-    "BaseUrl": "http://172.20.5.27:1380/finance/api/v1"
+    "VoucherBaseUrl": "",
+    "search": "",
+    "BaseUrl": ""
   },
 
   "SubBaseUrl": {
-    "Sub": "http://172.20.5.27:9445/api/v1/Sbu/entity/2",
-    "SubAgent": "http://172.20.5.27:9445/api/v1/Sbu",
-    "SubAgentUser": "http://172.20.5.27:9445/api/v1/User"
+    "Sub": "",
+    "SubAgent": "",
+    "SubAgentUser": ""
   },
 
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=172.20.5.45\\testdb;Initial Catalog=RubyPandCNew;Persist Security Info=False;Trusted_Connection=false;User =cbademo;Password=FSG&&OnjYB;MultipleActiveResultSets=False;TrustServerCertificate=true; Connection Timeout=30;"
+    "DefaultConnection": ""
   },
 
   "JwtSettings": {
     "SecretKey": "UAQT98sjiCulOJPsBT3ad2fXvgCsV2Vi",
-    "Issuer": "https://www.axamansard.com/",
-    "Audience": "https://www.axamansard.com/"
+    "Issuer": "",
+    "Audience": ""
   },
 
   "AppSettings": {
 
     "Jwt": {
       "SecretKey": "MAQT98sjiCulOJPsBT3ad2fXvgCsV2Vi",
-      "Issuer": "https://www.axamansard.com/",
-      "Audience": "https://www.axamansard.com/",
+      "Issuer": "",
+      "Audience": "",
       "TokenTimeout": "30"
     },
     "FileServerConfiguration": {
@@ -57,25 +57,25 @@
     },
 
     "AdminUrl": {
-      "BaseUrl": "http://172.20.5.27:9445/api/v1",
+      "BaseUrl": "",
       "LineOfBusinessId": 1,
       "BrokerId": 3,
       "IsurerId": 4
 
     },
     "FinanceBaseUrl": {
-      "BaseUrl": "http://172.20.5.27:1380/finance/api/v1",
-      "VoucherBaseUrl": "http://172.20.5.27:1380/finance/api/v2/customers/{customerNumber}/vouchers"
+      "BaseUrl": "",
+      "VoucherBaseUrl": ""
     },
 
     "AdminAuth": {
-      "TokenUrl": "http://172.20.5.27:9445/api/connect/token",
+      "TokenUrl": "",
       "Username": "rubypandc@admin.com",
       "Password": "Ruby@PCAdmin123"
     },
 
     "FinanceAuth": {
-      "TokenUrl": "http://172.20.5.27:1380/finance/api/v1/authentication/login",
+      "TokenUrl": "",
       "userId": "pandc",
       "password": "axalands123!!"
     },
@@ -85,7 +85,7 @@
     "ConfigModels": {
       "AllowedHosts": "localhost",
       "SwaggerUi": "swagger",
-      "RubyFinanceBaseUrl": "http://rubyfinanceapi",
+      "RubyFinanceBaseUrl": "",
       "ProductTeamProductApprovalProcess": 19,
       "UnderWriterTeamProductApprovalProcess": 6,
       "FinConTeamProductApprovalProcess": 7,
@@ -100,7 +100,7 @@
       "SecondApprovingOffice": 14,
       "BrokerTypeId": 3,
       "InsuranceTypeId": 4,
-      "MockLarms": "http://172.20.5.27/Larms/api/Larms",
+      "MockLarms": "",
       
 
       "WorkflowEmailTemplate": {
